Add support for nodemailer so developers can configure their mailer transport.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "main": "./index.js",
     "dependencies": {
-        "email": "0.2.x"
+        "email": "0.2.x",
+        "nodemailer": "0.4.x"
     }
 }
